--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "@react-three/fiber": "^8.13.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.13.0",
+    "react-router-dom": "^6.13.0",
     "three": "^0.153.0"
   },
   "devDependencies": {
